--- a/src/components/main/index.scss
+++ b/src/components/main/index.scss
@@ -98,9 +98,8 @@ a:hover {
 
 .on-img {
     position: absolute;
-    margin: -60px 0;
+    margin: -60px 90px;
     width: 260px;
-    text-align: center;
 }
 
 .btn-icon {
