--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -1,7 +1,7 @@
 .header-container {
     width: 1440px;
     height: 131.5px;
-    padding: 18px 140px 0;
+    padding: 20px 140px;
     font-weight: $fatText;
 
     .topbar {
@@ -32,7 +32,6 @@
 
     .navigation-items {
         @include flexibleCenter ();
-        height: 80px;
 
         .page-links {
             padding: 0 25px;
