--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -34,7 +34,7 @@
         @include flexibleCenter ();
 
         .page-links {
-            padding: 0 25px;
+            margin: 0 40px;
         }
     }
 }
