--- a/src/components/header/components/topbar.ejs
+++ b/src/components/header/components/topbar.ejs
@@ -1,6 +1,6 @@
     <nav class="topbar">
             <section><img src="./img/geolocation.jpg"> <a href="">Minsk</a></section>
-            <section><img src="./img/cassiopeia.jpg"></section>
+            <h1 class="main-title">CASSIOPEIA</h1>
             <section>
                 <button class="top-btn search"><img src="./img/search.jpg"></button>
                 <button class="top-btn"><img src="./img/sharpe.jpg"></button>
