--- a/src/components/main/index.ejs
+++ b/src/components/main/index.ejs
@@ -7,14 +7,27 @@
             './components/level-navigations.ejs',
             {
                 navigation: [
-                    'Level 1 /', 
-                    ' Level 2 /', 
-                    ' Level 3 ' ,
+                    {
+                    btnName: 'Level 1 /',
+                    btnClass: 'level1', 
+                    },
+                    {
+                    btnName: 'Level 2 /',
+                    btnClass: 'level2', 
+                    },
+                    {
+                    btnName: 'Level 3 /',
+                    btnClass: 'level3', 
+                    },
+                    {
+                    btnName: 'Level 4',
+                    btnClass: 'level4', 
+                    },
                 ],
             }
         )-%>
 
-        <h1>All plants</h1>
+        <h1 class="title-level">Level 1</h1>
 
         <!-- FILTER -->
         
@@ -76,8 +89,9 @@
         <!-- LINE -->
         <hr text-align="left">
         <!-- CARDS -->
+        <article class="container">
         <%- include(
-            './components/card.ejs', {
+            './components/page1.ejs', {
                 cards: [
                     {
                     urlImg: 'https://garden.tomsk.ru/image/data/flowers/bukety/standart/buket_krasivyi%20(1).jpg',             
@@ -131,6 +145,177 @@
                 ],
             }
         )-%>
+
+        <%- include(
+            './components/page2.ejs', {
+                cards: [
+                    {
+                    urlImg: 'https://rozamarket.by/image/cache/catalog/novetyulpani/Sinie_rozy_8_16023505-74x74.jpg',             
+                    name: 'Rose',
+                    price: '42$',
+                    priceS: '51$',
+                    },
+                    {
+                    urlImg: 'https://sunrose.com.ua/productsImgs/img949_main_l.jpg',            
+                    name: 'Rose 1',
+                    price: '32$',
+                    priceS: '41$',
+                    },
+                    {
+                    urlImg: 'https://img.s-fl.ru/img/catalog/big/c_642_790_518665149.jpg',           
+                    name: 'Rose 2',
+                    price: '41$',
+                    priceS: '44$',
+                    },
+                    {
+                    urlImg: 'https://www.rosemarkt.ru/resources/data/photos/5469f3199c9ca/big.jpg',             
+                    name: 'Rose 3',
+                    price: '32$',
+                    priceS: '46$',
+                    },
+                    {
+                    urlImg: 'https://romashkovo-24.ru/assets/images/products/24685/roza1-1.jpg',              
+                    name: 'Rose 4',
+                    price: '22$',
+                    priceS: '31$',
+                    },
+                    {
+                    urlImg: 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQsvxwCC2qGbj_zF7OITRW_aDLb565ysZhYXg&usqp=CAU',             
+                    name: 'Rose 5',
+                    price: '45$',
+                    priceS: '65$',
+                    },
+                    {
+                    urlImg: 'https://flowersmarket24.ru/wa-data/public/shop/products/31/47/4731/images/459/buket-2455.970.jpg',              
+                    name: 'Rose 6',
+                    price: '33$',
+                    priceS: '45$',
+                    },
+                    {
+                    urlImg: 'https://rozaomsk.ru/wa-data/public/shop/products/47/00/47/images/49/49.970.jpg',              
+                    name: 'Rose 7',
+                    price: '32$',
+                    priceS: '39$',
+                    },
+                    
+                ],
+            }
+        )-%>
+
+                    <%- include(
+            './components/page3.ejs', {
+                cards: [
+                {
+                    urlImg: 'https://romashkovo-24.ru/assets/images/products/24685/roza1-1.jpg',              
+                    name: 'Rose 1',
+                    price: '22$',
+                    priceS: '31$',
+                    },
+                    {
+                    urlImg: 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQsvxwCC2qGbj_zF7OITRW_aDLb565ysZhYXg&usqp=CAU',             
+                    name: 'Rose 2',
+                    price: '45$',
+                    priceS: '65$',
+                    },
+                    {
+                    urlImg: 'https://flowersmarket24.ru/wa-data/public/shop/products/31/47/4731/images/459/buket-2455.970.jpg',              
+                    name: 'Rose 3',
+                    price: '33$',
+                    priceS: '45$',
+                    },
+                    {
+                    urlImg: 'https://rozaomsk.ru/wa-data/public/shop/products/47/00/47/images/49/49.970.jpg',              
+                    name: 'Rose 4',
+                    price: '32$',
+                    priceS: '39$',
+                    },
+                    {
+                    urlImg: 'https://роза-мимоза.рф/image/cache/catalog/product/rose3/31879501_1621340677934489_5461034407009714176_n-1000x1000.jpg',              
+                    name: 'Rose 5',
+                    price: '22$',
+                    priceS: '31$',
+                    },
+                    {
+                    urlImg: 'https://vjoy.cc/wp-content/uploads/2019/07/20-4.jpg',             
+                    name: 'Rose 6',
+                    price: '45$',
+                    priceS: '65$',
+                    },
+                    {
+                    urlImg: 'https://shumgam.ru/wp-content/uploads/3/e/2/3e248fe98475ad2c8e7ffe87e1489b29.jpg',              
+                    name: 'Rose 7',
+                    price: '33$',
+                    priceS: '45$',
+                    },
+                    {
+                    urlImg: 'https://anons.uz/media/uploads/2020/03/02/88346887_1647549152062429_2468747919000338432_o.jpg',              
+                    name: 'Rose 8',
+                    price: '32$',
+                    priceS: '39$',
+                    },
+                    
+                ],
+            }
+        )-%>
+
+
+            <%- include(
+            './components/page4.ejs', {
+                cards: [
+                    {
+                    urlImg: 'https://garden.tomsk.ru/image/data/flowers/bukety/standart/buket_krasivyi%20(1).jpg',             
+                    name: 'Rose',
+                    price: '42$',
+                    priceS: '51$',
+                    },
+                    {
+                    urlImg: 'https://garden.tomsk.ru/image/cache/data/flowers/podarki/krasivyi_buket_v_kraft_pakete%20(2)-750x750.jpg',            
+                    name: 'Rose 1',
+                    price: '32$',
+                    priceS: '41$',
+                    },
+                    {
+                    urlImg: 'https://daricvety.com/upload/iblock/27d/27dd552baed30a81e3a765dc102f34ee.jpg',           
+                    name: 'Rose 2',
+                    price: '41$',
+                    priceS: '44$',
+                    },
+                    {
+                    urlImg: 'https://art-flo.ru/image/cache/catalog/915-%282%29-1000x1000.jpg',             
+                    name: 'Rose 3',
+                    price: '32$',
+                    priceS: '46$',
+                    },
+                    {
+                    urlImg: 'https://rozamarket.by/image/cache/catalog/novetyulpani/Sinie_rozy_8_16023505-74x74.jpg',             
+                    name: 'Rose 4',
+                    price: '42$',
+                    priceS: '51$',
+                    },
+                    {
+                    urlImg: 'https://sunrose.com.ua/productsImgs/img949_main_l.jpg',            
+                    name: 'Rose 5',
+                    price: '32$',
+                    priceS: '41$',
+                    },
+                    {
+                    urlImg: 'https://img.s-fl.ru/img/catalog/big/c_642_790_518665149.jpg',           
+                    name: 'Rose 6',
+                    price: '41$',
+                    priceS: '44$',
+                    },
+                    {
+                    urlImg: 'https://www.rosemarkt.ru/resources/data/photos/5469f3199c9ca/big.jpg',             
+                    name: 'Rose 7',
+                    price: '32$',
+                    priceS: '46$',
+                    },
+                    
+                ],
+            }
+        )-%>
+
+    </article>
 
         <!-- BUTTON See More-->
 
